--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/websockets": "^9.3.9",
+    "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
